--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "^7.0.0",
+    "@angular/animations": "^7.2.0",
+    "@angular/cdk": "^7.2.1",
     "@angular/common": "^7.0.0",
     "@angular/compiler": "^7.0.0",
     "@angular/core": "^7.0.0",
     "@angular/forms": "^7.0.0",
     "@angular/http": "^7.0.0",
+    "@angular/material": "^7.2.1",
     "@angular/platform-browser": "^7.0.0",
     "@angular/platform-browser-dynamic": "^7.0.0",
     "@angular/router": "^7.0.0",
     "@angular/upgrade": "^7.0.0",
     "angular-in-memory-web-api": "^0.6.0",
+    "codelyzer": "^4.5.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.3.0",
     "zone.js": "~0.8.26"
